--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,16 +6,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Linting */
+    "typeRoots": ["./node_modules/@types", "./node_modules"],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
