--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && npm run copy-fix-scripts",
+    "build:original": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "fix-proj4": "node fix-proj4.js",
+    "copy-fix-scripts": "cp public/proj4-fix.js dist/ && cp public/json-parse-fix.js dist/ && node fix-index-html.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -20,9 +23,13 @@
     "@types/shpjs": "^3.4.7",
     "firebase": "^10.14.1",
     "geojson": "^0.5.0",
+    "georaster": "^1.6.0",
+    "georaster-layer-for-leaflet": "^3.10.0",
+    "geotiff": "^2.1.3",
     "idb": "^8.0.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "ol": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
@@ -38,6 +45,7 @@
     "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20.11.19",
+    "@types/proj4": "^2.5.6",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.3.5",
     "@types/unzipper": "^0.10.9",
