--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet-image": "^0.4.0",
-    "ol": "^10.5.0",
     "proj4": "^2.9.2",
     "proj4-fully-loaded": "^0.2.0",
     "react": "^18.2.0",
@@ -60,7 +59,7 @@
     "@types/unzipper": "^0.10.9",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.10.0",
     "autoprefixer": "^10.4.17",
     "dotenv": "^16.5.0",
     "eslint": "^8.56.0",
