--- a/.gitignore
+++ b/.gitignore
@@ -32,14 +32,7 @@ dist-ssr
 .env.production.local
 
 # Build output
-build/
-out/
-
-# Coverage reports
-coverage/
-
-# Uploaded files
-src/uploads/
+dist/
 
 # TypeScript
 *.tsbuildinfo
