--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
     "dev": "vite",
     "build": "vite build",
     "build:static": "vite build",
-    "build:fixed": "./build-with-fixes.sh",
-    "build:simple": "./build-simple.sh",
-    "build:production": "./build-production.sh",
+
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build:production && firebase deploy --only hosting",
+    "deploy:github": "npm run build && gh-pages -d dist",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist node_modules/.vite",
-    "serve": "npx http-server ./dist -o -p 8080",
-    "serve:firebase": "firebase serve --only hosting"
+    "serve": "npx http-server ./dist -o -p 8080"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -25,7 +22,7 @@
     "@types/leaflet-draw": "^1.0.11",
     "@types/shpjs": "^3.4.7",
     "dom-to-image": "^2.6.0",
-    "firebase": "^10.14.1",
+
     "geojson": "^0.5.0",
     "georaster": "^1.6.0",
     "georaster-layer-for-leaflet": "^3.10.0",
