--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "vite",
     "build": "vite build",
     "build:static": "vite build",
-
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "deploy:github": "npm run build && gh-pages -d dist",
@@ -22,7 +21,6 @@
     "@types/leaflet-draw": "^1.0.11",
     "@types/shpjs": "^3.4.7",
     "dom-to-image": "^2.6.0",
-
     "geojson": "^0.5.0",
     "georaster": "^1.6.0",
     "georaster-layer-for-leaflet": "^3.10.0",
@@ -32,6 +30,7 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet-image": "^0.4.0",
+    "proj4": "^2.19.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
