--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:static": "vite build",
-
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist node_modules/.vite",
     "serve": "npx http-server ./dist -o -p 8080"
@@ -22,7 +20,6 @@
     "@types/leaflet-draw": "^1.0.11",
     "@types/shpjs": "^3.4.7",
     "dom-to-image": "^2.6.0",
-
     "geojson": "^0.5.0",
     "georaster": "^1.6.0",
     "georaster-layer-for-leaflet": "^3.10.0",
@@ -48,6 +45,7 @@
     "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20.11.19",
+    "@types/proj4": "^2.5.6",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.3.5",
     "@types/unzipper": "^0.10.9",
